# axum-otel-demo

./: .gitignore  Cargo.toml
config/: dev.toml  prod.toml
docs/: schema.sql
docs/admin/: API.md
front/admin/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
front/admin/src/: App.tsx  altcha.d.ts  index.css  main.tsx
front/admin/src/api/: auth.ts
front/admin/src/auth/: storage.ts
front/admin/src/components/: HtmlRichEditor.tsx  ImageUrlField.tsx
front/admin/src/constants/: sitePage.ts  status.ts
front/admin/src/context/: AuthProvider.tsx  authContext.ts
front/admin/src/layouts/: AdminLayout.tsx
front/admin/src/mock/: server.ts
front/admin/src/pages/: CategoriesPage.tsx  InquiriesPage.tsx  Login.tsx  NewsDetailPage.tsx  NewsPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  SitePageDetailPage.tsx  SitePagesPage.tsx  TagsPage.tsx  UsersPage.tsx
scripts/: bench.sh
src/: app.rs  cli.rs  config.rs  db.rs  error.rs  main.rs  shutdown.rs
src/api/: mod.rs
src/api/admin/: mod.rs
src/api/common/: mod.rs
src/api/front/: mod.rs
src/dto/: response.rs  user.rs
src/handlers/: user.rs
src/middleware/: auth.rs  current_user.rs  log_bodies.rs  mod.rs
src/models/: admin.rs  category.rs  inquiry.rs  mod.rs  news.rs  page.rs  product.rs  product_tag.rs  tag.rs  user.rs
src/repositories/: admin.rs  category.rs  inquiry.rs  mod.rs  news.rs  page.rs  product.rs  product_tag.rs  tag.rs  user.rs
src/services/: user.rs
src/telemetry/: logger.rs  mod.rs  profiling.rs  tracer.rs
src/utils/: time.rs
(+33 files in other folders)
