[package]
name = "axum-otel-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "local-time"] }
tracing = "0.1.34"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.82"

# OpenTelemetry 相关依赖
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "logs"] }
opentelemetry-semantic-conventions = "0.29"
tracing-opentelemetry = "0.30"
opentelemetry-appender-tracing = { version = "0.29", features = ["experimental_use_tracing_span_context"] }

# HTTP 中间件
tower-http = { version = "0.6", features = ["trace"] }

# Pyroscope 持续性能分析
pyroscope = "0.5"
pyroscope_pprofrs = "0.2"
